--- a/ARKitImageRecognition/Base.lproj/Main.storyboard
+++ b/ARKitImageRecognition/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,15 +27,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Game Introduction" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZRN-ed-ITE">
-                                            <rect key="frame" x="74" y="34" width="301" height="40"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Game Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJL-Zg-pQ9">
-                                            <rect key="frame" x="65" y="14" width="139" height="26"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJL-Zg-pQ9">
+                                            <rect key="frame" x="65" y="16" width="139" height="36"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -46,12 +40,22 @@
                                                 <constraint firstAttribute="width" constant="57" id="ZFv-Vb-Ykp"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Introduction" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZRN-ed-ITE">
+                                            <rect key="frame" x="65" y="49" width="127.5" height="22"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="ZRN-ed-ITE" secondAttribute="bottom" constant="8.5" id="8nw-mY-WID"/>
                                         <constraint firstItem="PJL-Zg-pQ9" firstAttribute="leading" secondItem="Bc4-gt-7qC" secondAttribute="trailing" constant="3" id="LJm-0n-srz"/>
                                         <constraint firstAttribute="bottom" secondItem="Bc4-gt-7qC" secondAttribute="bottom" constant="12.5" id="MPz-x7-t8u"/>
                                         <constraint firstItem="Bc4-gt-7qC" firstAttribute="top" secondItem="FkU-Kx-vNz" secondAttribute="top" constant="10" id="VEt-Qh-VAo"/>
                                         <constraint firstItem="Bc4-gt-7qC" firstAttribute="leading" secondItem="FkU-Kx-vNz" secondAttribute="leading" constant="5" id="gpf-v3-lmg"/>
+                                        <constraint firstItem="ZRN-ed-ITE" firstAttribute="top" secondItem="FkU-Kx-vNz" secondAttribute="top" constant="49" id="hIt-ii-m9h"/>
+                                        <constraint firstItem="ZRN-ed-ITE" firstAttribute="leading" secondItem="Bc4-gt-7qC" secondAttribute="trailing" constant="3" id="tWX-oS-Ugu"/>
+                                        <constraint firstItem="PJL-Zg-pQ9" firstAttribute="top" secondItem="FkU-Kx-vNz" secondAttribute="topMargin" constant="5" id="weT-S3-XlS"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
